--- a/.eslintrc
+++ b/.eslintrc
@@ -2,23 +2,6 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "linebreak-style": 0,
-    "spaced-comment": ["error", "always", {
-      "line": {
-          "markers": ["/"],
-          "exceptions": ["-", "+"]
-      },
-      "block": {
-          "markers": ["!"],
-          "exceptions": ["*"],
-          "balanced": true
-      }
-  }],
-    "object-curly-newline": ["error", {
-      "ObjectExpression": "always",
-      "ObjectPattern": { "multiline": true, "minProperties": 10 },
-      "ImportDeclaration": "always",
-      "ExportDeclaration": { "multiline": true, "minProperties": 10 }
-}]
+    "linebreak-style": 0
   }
 }
